--- a/iNLab-Frontend/web/graficos/graficos.xhtml
+++ b/iNLab-Frontend/web/graficos/graficos.xhtml
@@ -8,115 +8,28 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="page_content">   
 
-        <script>
-            $(document).ready(function () {
-                var datosTipo = [
-                    {
-                        value: #{graficos.totalMuestreos('Producto')},
-                        color: "#F7464A",
-                        highlight: "#FF5A5E",
-                        label: "Producto"
-                    },
-                    {
-                        value: #{graficos.totalMuestreos('Ambiente')},
-                        color: "#86B559",
-                        highlight: "#9AC949",
-                        label: "Ambiente"
-                    },
-                    {
-                        value: #{graficos.totalMuestreos('Operario')},
-                        color: "crimson",
-                        highlight: "blue",
-                        label: "Operario"
-                    }
-                ];
-                var datosResultadosRecuentoTipo = [
-                    {
-                        value: #{graficos.totalInaceptables},
-                        color: "crimson",
-                        highlight: "#ff6666",
-                        label: "Inaceptables"
-                    },
-                    {
-                        value: #{graficos.totalAceptables},
-                        color: "#2c5697",
-                        highlight: "#4297d7",
-                        label: "Aceptables"
-                    },
-                    {
-                        value: #{graficos.totalMarginales},
-                        color: "#ff9900",
-                        highlight: "#ffcc00",
-                        label: "Marginal"
-                    }
-                ];
 
-                var opciones = {
-                    animationSteps: 200
-                            /*                    
-                             //<![CDATA[
-                             legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
-                             ////]]>    
-                             * */
-                };
-                try {
-                    // Get context with jQuery - using jQuery's .get() method.
-                    var ctx = $("#myChart").get(0).getContext("2d");
-                    var ctx2 = $("#ensayoRecuentos").get(0).getContext("2d");
-                    // This will get the first returned node in the jQuery collection.
-                    var chartMuestreosTipo = new Chart(ctx).Pie(datosTipo, opciones);
-                    var chartResultadosRecuentoTipo = new Chart(ctx2).Pie(datosResultadosRecuentoTipo, opciones);
-                } catch (ex) {
-                }
-            });
-        </script>
 
         <h:form>
+
             <h:outputText value="Graficos" />
             <hr/>
-            <span>
-                <fieldset><legend>Por Tipo</legend>                    
-                    <div >
-                        <canvas id="myChart" width="300" height="200" ></canvas>
-                    </div>
-                </fieldset>
-            </span>
-            <span>
-                <fieldset><legend>Por Ensayos (Recuentos)</legend>
-                    <div>
-                        <span><h:outputLabel value="Tipo"/></span>
-                        <h:panelGrid id="panel-grafico-seleccion-tipomuestra">
+            <div style="width: 99%" >
+                <fieldset><legend>Por Tipo</legend>
 
-                            <span>
-                                <h:selectOneListbox value="${graficos.tipoMuestraSeleccionado}">
-                                    <f:selectItems value="${graficos.tiposMuestras}" var="tipo" itemValue="${tipo}" itemLabel="${tipo}"/>
-                                    <f:ajax execute="@this" event="valueChange" render="panel-grafico-seleccion-ensayo panel-grafico-ensayos" />
-                                </h:selectOneListbox>
-                            </span>
-                        </h:panelGrid>
-                        <span><h:outputLabel value="Ensayo"/></span>
-                        <h:panelGrid id="panel-grafico-seleccion-ensayo">
-                            <span>
-                                <h:selectOneListbox value="${graficos.idEnsayoSeleccionado}">
-                                    <f:selectItems value="${graficos.ensayos}" var="ensayo" itemValue="${ensayo.id}" itemLabel="${ensayo.denominacion}"/>
-                                    <f:ajax execute="@this" event="valueChange" render="panel-grafico-seleccion-tipomuestra panel-grafico-ensayos" />
-                                </h:selectOneListbox>
-                            </span>
-                        </h:panelGrid>
-                    </div>
-                    <div>
-                        <h:panelGrid id="panel-grafico-ensayos">
-                            <span><canvas id="ensayoRecuentos" width="300" height="200" ></canvas></span>
-                        </h:panelGrid>
-                    </div>
                 </fieldset>
-            </span>
-            <span>
+            </div>
+            <div>
+
+                <fieldset><legend>Por Ensayos (Recuentos)</legend>
+
+                </fieldset>
+            </div>
+            <div>
                 <fieldset><legend>Por Destino</legend>
 
                 </fieldset>
-
-            </span>
+            </div>
         </h:form>
     </ui:define>
 </ui:composition>
